# SWAN

./: README.md
code/c/: SWAN C Implementation Notes  SWAN128.h  SWAN128_PRECOMPUTE.h  SWAN256.h  SWAN256_PRECOMPUTE.h  SWAN64.h  SWAN64_PRECOMPUTE.h  test128.c  test128_precompute.c  test256.c  test256_precompute.c  test64.c  test64_precompute.c
code/c/factory_mode/: CMakeLists.txt  README.md
code/c/factory_mode/include/: SWAN.h
code/c/factory_mode/src/: SWAN.c  SWAN128.c  SWAN256.c  SWAN64.c
code/c/factory_mode/test/: count_cycles.h  test_main.c
code/performance/: rijndael_tb.c
code/verilog/: readme_cn.txt  readme_en.txt
code/whitebox/: .gitignore
code/whitebox/wbswan128/: CMakeLists.txt
code/whitebox/wbswan128/include/config/: config.h
code/whitebox/wbswan128/include/m4ri/: m4ri_config.h  misc.h  mmc.h  mzd.h  ple_russian.h
code/whitebox/wbswan128/include/math/: matrix_gf2.h
code/whitebox/wbswan128/include/wbswan/: wbswan.h
code/whitebox/wbswan128/test/: maintest.c  test_main.c  wbswan128_test.c
code/whitebox/wbswan256/: CMakeLists.txt
code/whitebox/wbswan256/include/m4ri/: mzd.h  triangular_russian.h
code/whitebox/wbswan256/include/math/: affine_transform.h  matrix_gf2.h  matrix_utils.h
code/whitebox/wbswan256/include/wbswan/: wbswan.h
code/whitebox/wbswan256/test/: maintest.c  test_main.c  wbswan256_test.c
documentations/SWAN_pics/: SWAN64_StrongWhiteBoxImplementation.emf  SWAN64_WeakWhiteBoxImplementation.wmf  SWAN_Algorithm_BlackBoxRound.wmf  SWAN_Algorithm_Serial.sdr  SWAN_Algorithm_Serial.wmf  SWAN_Algorithm_WhiteBoxRound.sdr  SWAN_Hardware_SemiParallel.sdr  SWAN_Hardware_Serial.sdr
documents/SWAN_pics/: SWAN64_StrongWhiteBoxImplementation.sdr  SWAN64_WeakWhiteBoxImplementation.sdr  SWAN64_WhiteBoxImplementation.sdr  SWAN64_WhiteBoxImplementation.wmf  SWAN_Algorithm_BlackBoxRound.sdr  SWAN_Algorithm_KeySchedule.sdr  SWAN_Algorithm_KeySchedule.wmf  SWAN_Algorithm_StrongWhiteBox.sdr  SWAN_Algorithm_StrongWhiteBox.wmf  SWAN_Algorithm_WhiteBoxRound.wmf  SWAN_Hardware_SemiParallel.wmf  SWAN_Hardware_Serial.wmf
security_analysis/: Sbox2ANF.py
security_analysis/DiffusionAnalysis/: 128main.c  256main.c  64main.c  Diffusion.h  main.c  (+6 more)
(+157 files in other folders)
