CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

#set the project name with swan
PROJECT(swan)

#set the INCLUDE_DIRECTORIES
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(test)

SET(BUILD_NAME ${PROJECT_NAME})

#源文件目录
AUX_SOURCE_DIRECTORY(src SRC_FILES)

#测试文件目录
AUX_SOURCE_DIRECTORY(test TEST_EXEC)

#设置编译选项
set(CMAKE_C_FLAGS_RELEASE     "-O2")

set(CMAKE_C_FLAGS_DEBUG       "-O0 -g3 ")


ADD_LIBRARY(${BUILD_NAME} SHARED ${SRC_FILES})

ADD_EXECUTABLE(MAIN ${TEST_EXEC})


TARGET_LINK_LIBRARIES(MAIN  ${BUILD_NAME})
